@@ -112,3 +112,4 @@
  3-Sep-2021  - V1.21 Add FileLock() module
  8-Sep-2021  - V1.22 Add LogUtil() structured logging formatter module
 16-Sep-2021  - V1.23 Add '.xz' file uncompression capability to FileUtil()
+16-Sep-2021  - V1.24 Add support for zero copy http mmCIF access.
